# ResumAI

./: .gitignore  README.md  index.html  package-lock.json  package.json  start.sh  test_main.py
backend/: Dockerfile  README.md  cloudbuild.yml  decode_to_pdf.py  demo.py  demo_service3.py  demo_service3_mock.py  demo_with_prompt.py  env.example  package.json  presentation_demo.py  pyproject.toml  requirements.txt  run.py  server.js  service2_demo.py  test_gcs_upload.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/routes/: __init__.py  chat.py  resume.py  resumes.py
backend/app/core/: config.py  error_templates.py
backend/app/models/: __init__.py
backend/app/schemas/: __init__.py  chat.py  optimize_schema.py  resume.py  resume_schema.py
backend/app/services/: file_service.py  pdf_service.py  resume_parser.py  resume_service.py
backend/app/services/llm/: __init__.py  base.py  exceptions.py  factory.py  gemini.py  gemini_provider.py  llm_service.py  schemas.py
backend/app/services/parsers/: __init__.py  document_parser.py
backend/app/services/prompt/: __init__.py  builder.py  templates.py
backend/app/services/storage/: __init__.py  gcs_service.py
backend/app/services/validators/: __init__.py  content_moderator.py  (+2 more)
backend/backend/docs/: sample_resume.docx
backend/docs/: RA-24-README.md
backend/scripts/: demo_parsing.py
backend/tests/: conftest.py  test_example.py  test_gcs_download_service.py  test_gemini_provider.py  test_llm_service.py  test_optimize.py  test_prompt_builder.py  test_resume_download.py  test_resume_parse.py  test_resume_upload.py
(+82 files in other folders)
