[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "JikunLiu101",email = "1015482278@qq.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (==0.109.0)",
    "uvicorn[standard] (==0.27.0)",
    "httpx (==0.26.0)",
    "python-dotenv (==1.0.0)",
    "pydantic-settings (==2.1.0)",
    "python-multipart (==0.0.6)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
